Bug 346592 - systray icon should flash if a private(DCC) chat tab got a new message
Summary: systray icon should flash if a private(DCC) chat tab got a new message
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: notifications (other bugs)
Version First Reported In: 1.5.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-24 20:28 UTC by Toralf Förster
Modified: 2015-04-29 14:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2015-04-24 20:28:44 UTC
currently just th private tab name is printed in dark red, but the KDE icon is not blinking :-( (KDE 4.14.6)

Reproducible: Always
Comment 1 Eike Hein 2015-04-28 21:01:41 UTC
Git commit ad30ca7831435f45f7321b816f50b8a5497c2083 by Eike Hein.
Committed on 28/04/2015 at 21:00.
Pushed by hein into branch '1.6'.

NotificationHandler hooks for DCC Chats.

M  +17   -0    src/dcc/chatcontainer.cpp

http://commits.kde.org/konversation/ad30ca7831435f45f7321b816f50b8a5497c2083
Comment 2 Toralf Förster 2015-04-28 22:08:12 UTC
great , unfortunately this patch can't be applied against  1.5.1, or ?
At least at  an stable hardened Gentoo I do get :

[ 83%] Building CXX object src/CMakeFiles/konversation.dir/dcc/dcccommon.o
cd /var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1_build/src && /usr/bin/x86_64-pc-linux-gnu-g++  -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=48 -DKDE_DEPRECATED_WARNINGS -DQT_NO_CAST_TO_ASCII -DQT_NO_STL -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -D_BSD_SOURCE -D_DEFAULT_SOURCE -D_REENTRANT -D_XOPEN_SOURCE=500  -DQT_NO_DEBUG -DNDEBUG -O2 -pipe -march=native  -Wnon-virtual-dtor -Wno-long-long -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -fvisibility-inlines-hidden -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1_build/src -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1 -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1_build -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/config -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/dcc -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/irc -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/viewer -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/linkaddressbook -I/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/upnp -I/usr/include/KDE -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtMultimedia -I/usr/include/qt4/QtHelp -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4 -I/usr/include/qca2/QtCrypto    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/konversation.dir/dcc/dcccommon.o -c /var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/dcc/dcccommon.cpp
/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/dcc/chatcontainer.cpp: In member function ‘void Konversation::DCC::ChatContainer::receivedLine(const QString&)’:
/var/tmp/portage/net-irc/konversation-1.5.1/work/konversation-1.5.1/src/dcc/chatcontainer.cpp:329:62: error: ‘QStringLiteral’ was not declared in this scope
                 QRegExp regexp(QStringLiteral("(^|[^\\d\\w])") +
                                                              ^
src/CMakeFiles/konversation.dir/build.make:2394: recipe for target 'src/CMakeFiles/konversation.dir/dcc/chatcontainer.o' failed
make[2]: *** [src/CMakeFiles/konversation.dir/dcc/chatcontainer.o] Error 1
make[2]: *** Waiting for unfinished jobs....
Comment 3 Eike Hein 2015-04-28 23:45:45 UTC
Try adding an include for QStringLiteral perhaps :). I pushed this to the 1.6 branch (and master) which is Qt 5.
Comment 4 Alexandr Akulich 2015-04-29 12:50:53 UTC
Qt4 have no QStringLiteral.
To compile with Qt4, replace QStringLiteral by QLatin1String.
Comment 5 Toralf Förster 2015-04-29 14:14:50 UTC
yep, that was it  - thx guys,