NotificationHandler hooks for DCC Chats.

BUG:346592